# cnn_c-

./: CMakeLists.txt  README.md  test.cpp
inc/: Matrix.h  activation.h  cNN_block.h  connect_block.h  flatten.h  loss.h  nerual_block.h  pool.h
src/: Matrix.cpp  activation.cpp  cNN_block.cpp  connect_block.cpp  flatten.cpp  loss.cpp  pool.cpp
